<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.yogeshwar.jpalmockups.SelectSite"
    tools:showIn="@layout/activity_select_site">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/district_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_district" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phc"
        android:id="@+id/phc_TV"
        android:layout_below="@+id/district_text_input_layout"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/anm"
        android:id="@+id/anm_TV"
        android:layout_below="@+id/phc_TV"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone"
        android:id="@+id/phone_TV"
        android:layout_below="@+id/anm_TV"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/date_TV"
        android:layout_below="@+id/phone_TV"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/session_site"
        android:id="@+id/session_TV"
        android:layout_below="@+id/date_TV"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_toEndOf="@+id/save_button"
        android:layout_alignTop="@+id/session_TV"
        android:layout_alignStart="@+id/save_button" />

</RelativeLayout>
